--- a/app.css
+++ b/app.css
@@ -25,6 +25,24 @@ body {
     text-align: left;
     user-select: none;
 }
+
+button {
+    font-size: 24px;
+    color: #fff;
+    border-radius: 5px;
+    appearance: none;
+    border: none;
+    padding: 20px;
+}
+
+#uploadButton {
+    background-color: midnightblue;
+}
+
+#startButton {
+    background-color: green;
+}
+
 input[type="file"] {
     margin: 20px 0;
 }
